--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,9 +1,9 @@
-name: Build Skin Generator
+name: Build Skin Generatorhttps://github.com/9961qqq/skin-generator/tree/master
 
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 
 jobs:
