--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,4 +1,4 @@
-name: Build Skin Generatorhttps://github.com/9961qqq/skin-generator/tree/master
+name: Build Skin Generator
 
 on:
   push:
@@ -14,28 +14,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Install vcpkg
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential cmake pkg-config
+          git clone https://github.com/microsoft/vcpkg.git
+          .\vcpkg\bootstrap-vcpkg.bat
 
-          # Install zlib
-          sudo apt-get install -y zlib1g-dev
+      - name: Install dependencies with vcpkg
+        run: |
+          .\vcpkg\vcpkg.exe install boost-log boost-log-setup zlib
 
-          # Install Boost
-          sudo apt-get install -y libboost-all-dev
-
-          # Install libzip from source
-          wget https://libzip.org/download/libzip-1.10.1.tar.gz
+      - name: Build libzip from source
+        run: |
+          curl -LO https://libzip.org/download/libzip-1.10.1.tar.gz
           tar -xzf libzip-1.10.1.tar.gz
           cd libzip-1.10.1
-          cmake .
-          make
-          sudo make install
+          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=../../vcpkg/scripts/buildsystems/vcpkg.cmake .
+          cmake --build . --config Release
+          cmake --install . --config Release
           cd ..
 
-      - name: Configure
-        run: cmake .
+      - name: Configure CMake
+        run: |
+          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake .
 
       - name: Build
-        run: cmake --build .
+        run: |
+          cmake --build . --config Release
