--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,17 +21,12 @@ jobs:
 
       - name: Install dependencies with vcpkg
         run: |
-          .\vcpkg\vcpkg.exe install boost-log zlib
+          .\vcpkg\vcpkg.exe install boost-log zlib libzip
 
-      - name: Build libzip from source
+      # 可选：显示已安装的包，调试用
+      - name: List installed libraries
         run: |
-          curl -LO https://libzip.org/download/libzip-1.10.1.tar.gz
-          tar -xzf libzip-1.10.1.tar.gz
-          cd libzip-1.10.1
-          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=../libzip_install .
-          cmake --build . --config Release
-          cmake --install . --config Release
-          cd ..
+          .\vcpkg\vcpkg.exe list
 
       - name: Configure CMake
         run: |
@@ -40,3 +35,10 @@ jobs:
       - name: Build
         run: |
           cmake --build . --config Release
+
+      # 可选：上传生成的可执行文件
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: skins_generator_bin
+          path: ./bin/*
