--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           .\vcpkg\vcpkg.exe install boost-log zlib libzip
 
+      - name: List Boost.Log config file
+        run: |
+          dir .\vcpkg\installed\x64-windows\share\boost-log
+
       - name: Configure CMake
         run: |
           cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake .
