--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Use CMake 3.30
+        run: choco install cmake --version=3.30.4
+
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg.git
