--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Use CMake 3.30
-        run: choco install cmake --version=3.30.4
-
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg.git
@@ -32,8 +29,8 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake .
-
+          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=.\vcpkg\scripts\buildsystems\vcpkg.cmake -DCMAKE_PREFIX_PATH=.\vcpkg\installed\x64-windows .
+        
       - name: Build
         run: |
           cmake --build . --config Release
