--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies with vcpkg
         run: |
-          .\vcpkg\vcpkg.exe install libzip@1.10.1:x64-windows boost@1.83.0:x64-windows zlib@1.3:x64-windows
+          .\vcpkg\vcpkg.exe install libzip:x64-windows boost:x64-windows zlib:x64-windows
 
       - name: Configure CMake
         run: |
