--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=.\vcpkg\scripts\buildsystems\vcpkg.cmake -DCMAKE_PREFIX_PATH=.\vcpkg\installed\x64-windows .
+          cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=.\vcpkg\scripts\buildsystems\vcpkg.cmake -DCMAKE_PREFIX_PATH=.\vcpkg\installed\x64-windows -DBOOST_ROOT=.\vcpkg\installed\x64-windows .
         
       - name: Build
         run: |
